Add gopilot functionality

--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -32,7 +32,7 @@
         <div class="interface">
             <div class="search-bar">
                 <input type="text" id="query" placeholder="Search the web">
-                <button class="gopilot-button"></button>
+                <button class="gopilot-button" id="gopilotButton"></button>
             </div>
             <div class="buttons">
                 <button id="searchButton">Search</button>
