Add text search in gopilot dialog

--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -45,6 +45,10 @@
         <div id="searchResults"></div>
         <div id="time"></div>
     </main>
+    <div id="gopilotDialog" title="Gopilot" style="display:none;">
+        <p>Your everyday search companion.</p>
+        <input type="text" id="gpQuery" placeholder="Ask me anything...">
+    </div>
     <script type="text/javascript" src="./script.js"></script>
 </body>
 
