Add logo click to refresh background image

--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -25,9 +25,11 @@
 
 <body>
     <header>
-        <div class="bingle">
-            <div class="logo"></div>
-            <h1>Alphasoft Bingle</h1>
+        <div class="top-bar">
+            <div id="bingle">
+                <div class="logo"></div>
+                <h1>Alphasoft Bingle</h1>
+            </div>
         </div>
         <div class="interface">
             <div class="search-bar">
