Add current time dialog

--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -52,6 +52,13 @@
         <p>Your everyday search companion.</p>
         <input type="text" id="gpQuery" placeholder="Ask me anything...">
     </div>
+    <div id="badLuckDialog" title="Oh no!" style="display:none;">
+        <p>Your luck detector is broken!<p>
+        <p>No results found...</p>
+    </div>
+    <div id="timeDialog" title="Current Time" style="display:none;">
+        <p id="timeDisplay"></p>
+    </div>
     <script type="text/javascript" src="./script.js"></script>
 </body>
 
