Add spinning logo during loading

--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -28,7 +28,7 @@
     <header>
         <div class="top-bar">
             <div id="bingle">
-                <div class="logo"></div>
+                <div id="logo"></div>
                 <h1>Alphasoft Bingle</h1>
             </div>
         </div>
